[package]
name = "link"
version = "0.1.0"
authors = ["postrequest"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.1", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
uuid = { version = "1.2.1", features = ["v4"] }
chrono = "0.4"
serde = "1.0.118"
rustyline = "10.0.0"
log = "0.4.0"
env_logger = "0.9.1"
base64 = "0.13.0"
byteorder = "1"
prettytable-rs = "0.9.0"
#tui = "0.13"
#termion = "1.5"
#sqlx = { version = "0.4.0", default-features = false, features = ["runtime-actix-native-tls", "sqlite", "time"] }

