[package]
name = "link"
version = "0.1.0"
authors = ["postrequest"]
edition = "2021"
doc = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
codegen-units = 1
strip = true

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[features]
dangerous_configuration = ["rustls/dangerous_configuration"]

[dependencies]
winapi = { version = "0.3", features = ["heapapi", "winbase", "winhttp", "memoryapi"] }
reqwest = { version = "0.11.12", features = ["blocking", "cookies", "json"] }
rustls = "0.20.7"
serde = "1.0.118"
webpki = "0.22.0"
base64 = "0.13.0"
goblin = "0.5.4"
obfstr = "0.4.1"
ifcfg = { git = "https://github.com/postrequest/ifcfg-rs", branch = "cross-compilation-windows-dynamic" }
sysinfo = "0.26.5"
safetydump = { git = "https://github.com/postrequest/safetydump", branch = "main" }
dynamic-winapi = { git = "https://github.com/postrequest/dynamic-winapi", branch = "main" }
